k8s/apps/default/atuin/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atuin
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/component: atuin
    app.kubernetes.io/instance: atuin
    app.kubernetes.io/name: atuin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: atuin
      app.kubernetes.io/instance: atuin
      app.kubernetes.io/name: atuin
  template:
    metadata:
      labels:
        app.kubernetes.io/component: atuin
        app.kubernetes.io/instance: atuin
        app.kubernetes.io/name: atuin
    spec:
      containers:
        - name: app
          image: ghcr.io/atuinsh/atuin:18.13.6@sha256:9bde3fe6b1633c357cb19c07ea49bb9834720e8ff42d04b39ad7865155581150
          imagePullPolicy: IfNotPresent
          args:
            - server
            - start
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              memory: 64Mi
            requests:
              cpu: 10m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /config
              name: config
      securityContext:
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 568
        runAsNonRoot: true
        runAsUser: 568
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: atuin
