k8s/apps/default/atuin/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atuin
  labels:
    app.kubernetes.io/instance: atuin
    app.kubernetes.io/name: atuin
    app.kubernetes.io/service: atuin
spec:
  type: ClusterIP
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: metrics
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/component: atuin
    app.kubernetes.io/instance: atuin
    app.kubernetes.io/name: atuin
