k8s/apps/default/atuin/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atuin
  labels:
    app.kubernetes.io/instance: atuin
    app.kubernetes.io/name: atuin
spec:
  hostnames:
    - sh.cbannister.xyz
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: atuin
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
